@@ -1,3 +1,9 @@
+2013-05-20  Niels Möller  <nisse@lysator.liu.se>
+
+	* x86_64/aes-decrypt-internal.asm: Likewise.
+
+	* x86_64/aes-encrypt-internal.asm: Adapted to new interface.
+
 2013-05-17  Niels Möller  <nisse@lysator.liu.se>
 
 	* aes.h (struct aes_ctx): Renamed nrounds to rounds, and moved
